# piemap

./: .gitignore  Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  mkdocs.yml  piemap.ABOUT  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256  setup.cfg
docs/: SUMMARY.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  mkdocs.yml  monthly-downloads.json  packaging-facts.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
piemap/: __init__.py  __main__.py  api.py  bitmap.py  cli.py  dsl.py  geometry.py  piemap.py  projections.py
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
test/: __init__.py  test_bitmap.py  test_cli.py  test_dsl.py  test_geometry.py  test_piemap.py  test_projections.py
test/data/dsl/: template-1.csv  template-2.csv  template-3.csv  template-4.csv  template-6.csv
test/data/dsl/regression/: axis-bi-monotone-1.csv  axis-folded-2.csv  axis-linear-2.csv  axis-linear-3.csv  default-config.csv  dimension-count-10.csv  dimension-count-12.csv  dimension-count-13.csv  dimension-count-14.csv  dimension-count-2.csv  dimension-count-3.csv  dimension-count-4.csv  dimension-count-5.csv  dimension-count-6.csv  dimension-count-7.csv  minimal-1.csv
tests/: test_cli.py  test_dsl.py  test_geometry.py  test_projections.py
tests/data/dsl/: template-5.csv  template-7.csv
tests/data/dsl/regression/: axis-anti-linear-1.csv  axis-folded-1.csv  (+10 more)
